@startuml
'https://plantuml.com/class-diagram

interface AgentFactory {
    +{abstract}Optional<Agent> createAgent(AgentDescriptor descriptor, Environment environment, ActionSource source, RLSettings settings)
}

interface AgentConstructor {
    +{abstract} Agent constructAgent(AgentDescriptor descriptor, Environment environment, ActionSource source, RLSettings settings)
}

class SimpleAgentFactory {
    -{static} Map<String, AgentConstructor> AGENT_CONSTRUCTORS
    +Optional<Agent> createAgent(AgentDescriptor descriptor, Environment environment, ActionSource source, RLSettings settings)
}

note right of SimpleAgentFactory::createAgent
    Agent agent = null;
    if (AGENT_CONSTRUCTORS.containsKey(descriptor.name()))
        agent = AGENT_CONSTRUCTORS
            .get(descriptor.name())
            .constructAgent(descriptor, environment, source, settings);

    Return agent
end note

SimpleAgentFactory *-- AgentConstructor
AgentFactory <|.. SimpleAgentFactory

@enduml